Update ajax methods for localization

--- a/templates/settings/postprocessing.html
+++ b/templates/settings/postprocessing.html
@@ -25,7 +25,7 @@
         <link href="${url_base}/static/css/settings/shared.css?v=06.02" rel="stylesheet">
         <link href="${url_base}/static/css/settings/postprocessing.css?v=06.02" rel="stylesheet">
 
-        <script src="${url_base}/static/js/settings/shared.js?v=08.01" type="text/javascript"></script>
+        <script src="${url_base}/static/js/settings/shared.js\?v=08.10" type="text/javascript"></script>
         <script src="${url_base}/static/js/settings/postprocessing.js?v=07.23" type="text/javascript"></script>
     </head>
     <body>
