--- a/templates/settings/server.html
+++ b/templates/settings/server.html
@@ -5,7 +5,7 @@
         <link href="${url_base}/static/css/settings/shared.css?v=06.02" rel="stylesheet">
         <link href="${url_base}/static/css/settings/server.css?v=06.02" rel="stylesheet">
 
-        <script src="${url_base}/static/js/settings/shared.js?v=08.01" type="text/javascript"></script>
+        <script src="${url_base}/static/js/settings/shared.js\?v=08.10" type="text/javascript"></script>
         <script src="${url_base}/static/js/settings/server.js?v=08.01" type="text/javascript"></script>
     </head>
     <body>
