--- a/templates/system.html
+++ b/templates/system.html
@@ -3,8 +3,8 @@
     <head>
         ${head}
         <link href="${url_base}/static/css/system.css?v=06.02" rel="stylesheet">
-        <script src="${url_base}/static/js/system.js?v=07.30" type="text/javascript"></script>
-        <script src="${url_base}/static/js/settings/shared.js?v=08.01" type="text/javascript"></script>
+        <script src="${url_base}/static/js/system.js?v=08.10" type="text/javascript"></script>
+        <script src="${url_base}/static/js/settings/shared.js\?v=08.10" type="text/javascript"></script>
         <script src="${url_base}/static/js/lib/liteuploader.min.js?v=07.27" type="text/javascript"></script>
 
         <meta name="tasks" content='${tasks}'>
