Fix mismatched gettext tags

--- a/templates/settings/downloader.html
+++ b/templates/settings/downloader.html
@@ -18,8 +18,8 @@
                 <div class="panel-heading">
                     <select id="usenet_client" class="form-control select-sm">
                         <option value="" selected="false">${_('Disabled')}</option>
-                        <option value="NzbGet">NzbGet')}</option>
-                        <option value="Sabnzbd">Sabnzbd')}</option>
+                        <option value="NzbGet">NzbGet</option>
+                        <option value="Sabnzbd">Sabnzbd</option>
                         <option value="BlackHole">${_('Black Hole')}</option>
                     </select>
                 </div>
