--- a/templates/system.html
+++ b/templates/system.html
@@ -131,11 +131,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="text_content">
-                            ${_('Restoring a backup will overwrite your <b>database</b>, <b>posters</b>, and <b>config</b>')}.
-                            <br/>
-                            This cannot be undone.
-                            <br/>
-                             Watcher will automatically restart after backup has been restored.')}
+                            ${_('Restoring a backup will overwrite your <b>database</b>, <b>posters</b>, and <b>config</b>.<br/>This cannot be undone.<br/>Watcher will automatically restart after backup has been restored.')}
                             <br/>
                             <div class="input-group">
                                 <label class="btn btn-default input-group-btn" for="zip_file">
@@ -162,6 +158,5 @@
                 </div>
             </div>
         </div>
-
     </body>
 </html>
