--- a/templates/head.html
+++ b/templates/head.html
@@ -11,7 +11,7 @@
 <script src="${url_base}/static/js/lib/jquery.310.min.js?v=06.14" type="text/javascript"></script>
 <script src="${url_base}/static/js/lib/bootstrap.min.js?v=06.14" type="text/javascript"></script>
 <script src="${url_base}/static/js/lib/bootstrap-notify.min.js?v=06.15" type="text/javascript"></script>
-<script src="${url_base}/static/js/shared.js\?v=08.10" type="text/javascript"></script>
+<script src="${url_base}/static/js/shared.js?v=08.10" type="text/javascript"></script>
 <script src="${url_base}/static/js/localization.js?v=08.01" type="text/javascript"></script>
 
 <textarea id="notifications_json" class="hidden">
