--- a/templates/settings/downloader.html
+++ b/templates/settings/downloader.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         ${head}
-        <script src="${url_base}/static/js/settings/shared.js\?v=08.10" type="text/javascript"></script>
+        <script src="${url_base}/static/js/settings/shared.js?v=08.10" type="text/javascript"></script>
         <script src="${url_base}/static/js/settings/downloader.js?v=08.10" type="text/javascript"></script>
 
         <link href="${url_base}/static/css/settings/shared.css?v=06.02" rel="stylesheet">
