--- a/templates/settings/indexers.html
+++ b/templates/settings/indexers.html
@@ -38,7 +38,7 @@
         <link href="${url_base}/static/css/settings/shared.css?v=06.02" rel="stylesheet">
         <link href="${url_base}/static/css/settings/indexers.css?v=06.02" rel="stylesheet">
 
-        <script src="${url_base}/static/js/settings/shared.js\?v=08.10" type="text/javascript"></script>
+        <script src="${url_base}/static/js/settings/shared.js?v=08.10" type="text/javascript"></script>
         <script src="${url_base}/static/js/settings/indexers.js?v=08.10" type="text/javascript"></script>
 
     </head>
