Use string 'User Name' rather than 'User'

--- a/templates/settings/downloader.html
+++ b/templates/settings/downloader.html
@@ -35,7 +35,7 @@
                             <input type="number" data-id="port" class="form-control" placeholder="6789" value="${config['Usenet']['NzbGet']['port']}">
                         </div>
                         <div class="col-md-6">
-                            <label>${_('User')}</label>
+                            <label>${_('User Name')}</label>
                             <input type="text" data-id="user" class="form-control" placeholder="" value="${config['Usenet']['NzbGet']['user']}">
                         </div>
                         <div class="col-md-6">
@@ -154,7 +154,7 @@
                             <input type="number" data-id="port" class="form-control" placeholder="58846" value="${config['Torrent']['DelugeRPC']['port']}">
                         </div>
                         <div class="col-md-6">
-                            <label>${_('User')}</label>
+                            <label>${_('User Name')}</label>
                             <input type="text" data-id="user" class="form-control" placeholder="" value="${config['Torrent']['DelugeRPC']['user']}">
                         </div>
                         <div class="col-md-6">
@@ -285,7 +285,7 @@
                             <input type="text" data-id="label" class="form-control" placeholder="Watcher" value="${config['Torrent']['rTorrentHTTP']['label']}">
                         </div>
                         <div class="col-md-6">
-                            <label>${_('User')}</label>
+                            <label>${_('User Name')}</label>
                             <input type="text" data-id="user" class="form-control" placeholder="tegbzn6789" value="${config['Torrent']['rTorrentHTTP']['user']}">
                         </div>
                         <div class="col-md-6">
@@ -322,7 +322,7 @@
                             <input type="number" data-id="port" class="form-control" placeholder="9091" value="${config['Torrent']['Transmission']['port']}">
                         </div>
                         <div class="col-md-6">
-                            <label>${_('User')}</label>
+                            <label>${_('User Name')}</label>
                             <input type="text" data-id="user" class="form-control" placeholder="" value="${config['Torrent']['Transmission']['user']}">
                         </div>
                         <div class="col-md-6">
@@ -371,7 +371,7 @@
                             <input type="number" data-id="port" class="form-control" placeholder="8080" value="${config['Torrent']['QBittorrent']['port']}">
                         </div>
                         <div class="col-md-6">
-                            <label>${_('User')}</label>
+                            <label>${_('User Name')}</label>
                             <input type="text" data-id="user" class="form-control" placeholder="" value="${config['Torrent']['QBittorrent']['user']}">
                         </div>
                         <div class="col-md-6">
