--- a/templates/settings/server.html
+++ b/templates/settings/server.html
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <label>${_('User')}</label>
+                    <label>${_('User Name')}</label>
                     <input type="text" id="authuser" class="form-control" value="${config['authuser']}">
                 </div>
                 <div class="col-md-3">
