--- a/templates/settings/postprocessing.html
+++ b/templates/settings/postprocessing.html
@@ -15,7 +15,7 @@
 </%def>
 
 <%
-    tags = '{title} {year} {resolution} {rated} {imdbid} {videocodec} {audiocodec} {releasegroup} {source} {quality}'
+    tags = '{title} {sort_title} {year} {resolution} {rated} {imdbid} {videocodec} {audiocodec} {releasegroup} {source} {quality}'
 %>
 
 <!DOCTYPE HTML5>
