Add 'edition' tag to post-processing
Using mods to PTN, find tags like director's cut, Xth anniversary, unrated, etc. Applied to paths when enabled in postprocessing options as {edition}

--- a/templates/settings/postprocessing.html
+++ b/templates/settings/postprocessing.html
@@ -15,7 +15,7 @@
 </%def>
 
 <%
-    tags = '{title} {sort_title} {year} {resolution} {rated} {imdbid} {videocodec} {audiocodec} {releasegroup} {source} {quality}'
+    tags = '{title} {sort_title} {year} {resolution} {rated} {edition} {imdbid} {videocodec} {audiocodec} {releasegroup} {source} {quality}'
 %>
 
 <!DOCTYPE HTML5>
