--- a/templates/head.html
+++ b/templates/head.html
@@ -4,6 +4,8 @@
 <meta content="${language}" name="language">
 <meta content="width=device-width,initial-scale=1" name="viewport">
 
+<link rel="icon" type="image/png" href="${url_base}/static/images/favicon.png" />
+
 <link href="${url_base}/static/css/themes/${uitheme or 'Default'}.css?v=001" rel="stylesheet">
 <link href="${url_base}/static/css/lib/materialdesignicons.min.css?v=001" rel="stylesheet">
 <link href="${url_base}/static/css/style.css?v=001" rel="stylesheet">
