Add TorrentDownloads torrent provider
http://www.torrentdownloads.me/

--- a/templates/settings/indexers.html
+++ b/templates/settings/indexers.html
@@ -138,6 +138,16 @@
                 <div class="col-md-6">
                     <div class="input-group">
                         <span class="input-group-addon box_box">
+                            <i class="mdi mdi-checkbox-blank-outline c_box" id="torrentdownloads" value="${config['Torrent']['torrentdownloads']}"></i>
+                        </span>
+                        <span class="input-group-item form-control">
+                            TorrentDownloads
+                        </span>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="input-group">
+                        <span class="input-group-addon box_box">
                             <i class="mdi mdi-checkbox-blank-outline c_box" id="torrentz2" value="${config['Torrent']['torrentz2']}"></i>
                         </span>
                         <span class="input-group-item form-control">
