added title to random recommendation

--- a/templates/suggestions.html
+++ b/templates/suggestions.html
@@ -15,10 +15,7 @@
         ${navbar}
         <div class="container-fluid">
 
-        <span class="section-title">${section_title}</span>
-	%if (sub_section_title):
-        <span class="sub-section-title">${sub_section_title}</span>
-	%endif
+        <span id="section-title" class="section-title">${section_title}</span>
             <ul id="movies">
             </ul>
         </div>
