--- a/static/css/add_movie.css
+++ b/static/css/add_movie.css
@@ -60,11 +60,20 @@ div.modal-body p.plot{
     text-indent: 2em;
 }
 
-span.section-title{
+span.section_title{
     font-size: 1.2em;
     text-decoration: underline;
+    margin-top: 10px;
+    display:block;
 }
 
-span.sub-section-title{
-    font-size: .7em;
+.sugg_bar {
+  background-color:#444;
+  font-size: 0.8em ;
+  border-radius:0.25em;
+}
+.sugg_bar>li>a.active,
+.sugg_bar>li>a:hover,
+.sugg_bar>li>a:focus {
+   background-color: #0066cc;
 }
