--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -41,41 +41,22 @@
                     </ul>
                 </li>
                 <li class="${'active' if current == 'add_movie' else ''}">
-                    <a href="${url_base}/add_movie">${_('Add Movie')}</a>
-                </li>
-                <li class="${'active' if current == 'suggestions' else ''}">
-                    <a href="${url_base}/popular" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                        ${_('Suggestions')}
-                        <i class="mdi mdi-chevron-down"></i>
-                    </a>
-                    <ul class="dropdown-menu" role="menu">
+                    <a href="${url_base}/add_movie" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                    ${_('Add Movie')}
+ 		    <i class="mdi mdi-chevron-down"></i>
+		    </a>
+		     <ul class="dropdown-menu" role="menu">
                         <li>
-                            <a href="${url_base}/sugg_nowplaying">
-                                <i class="mdi mdi-theater"></i> ${_('Now Playing')}
+                            <a href="${url_base}/add_movie">
+                                <i class="mdi mdi-magnify"></i> ${_('Search')}
                             </a>
                         </li>
                         <li>
                             <a href="${url_base}/sugg_popular">
-                                <i class="mdi mdi-star"></i> ${_('Most Popular')}
-                            </a>
-                        </li>
-                        <li>
-                            <a href="${url_base}/sugg_toprated">
-                                <i class="mdi mdi-chart-line"></i> ${_('Top Rated')}
-                            </a>
-                        </li>
-                        <li>
-                            <a href="${url_base}/sugg_upcoming">
-                                <i class="mdi mdi-calendar"></i> ${_('Upcoming')}
-                            </a>
-                        </li>
-                        <li>
-                            <a href="${url_base}/sugg_recommendation">
-                                <i class="mdi mdi-comment-question-outline"></i> ${_('Recommendation')}
+                                <i class="mdi mdi-star"></i> ${_('Suggestions')}
                             </a>
                         </li>
                     </ul>
-
                 </li>
                 <li class="dropdown ${'active' if current == 'settings' else ''}">
                     <a href="${url_base}/settings/server" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
