Add bitcoin donate address
So I've been mostly opposed to accepting donations until now. Even so I'm not thrilled about it, but this project takes up a fair amount of time and if someone wants to throw a dollar my direction who am I to stop them?

While I still suggest that users consider donating to a good charity before sending me anything, this allows the option.

--- a/static/css/system.css
+++ b/static/css/system.css
@@ -20,3 +20,14 @@ table#tasks i.disabled{
 .progress{
     margin-top: 1.25em;
 }
+
+#donate{
+    padding-top: 2em;
+    font-size: 0.75em;
+    margin: 0 auto;
+    text-align: center;
+}
+
+#donate i{
+    transition: none;
+}
