--- a/templates/system.html
+++ b/templates/system.html
@@ -100,6 +100,12 @@
 
                 </tbody>
             </table>
+
+            <div id="donate">
+                <a href="bitcoin:17BfQVGCsmHBNkVVbL1GxhhYFUMX2uytaT?label=Watcher">
+                <i class="mdi mdi-gift"></i>
+                <span>17BfQVGCsmHBNkVVbL1GxhhYFUMX2uytaT</span>
+            </div>
         </div>
 
         <div class="modal fade" id="modal_create_backup">
