--- a/templates/settings/search.html
+++ b/templates/settings/search.html
@@ -123,7 +123,7 @@
             <h1>${_('Watchlists')}</h1>
 
             <form class="form-horizontal well" data-category="watchlists">
-
+                * (12.19.17) IMDB has disabled RSS lists and may not sync
                 <div class="col-md-6">
                     <label>${_('Sync IMDB Watchlists Every [X] Minutes')}</label>
                     <div class="input-group">
