--- a/templates/settings/downloader.html
+++ b/templates/settings/downloader.html
@@ -69,7 +69,7 @@
                         </div>
                         <div class='col-md-12'>
                             <label>&nbsp;</label>
-                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'nzbget')">
+                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'NzbGet')">
                                 <i class="mdi mdi-lan-pending"></i>
                                 ${_('Test Connection')}
                             </a>
@@ -105,7 +105,7 @@
                         </div>
                         <div class='col-md-12'>
                             <label>&nbsp;</label>
-                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'sabnzbd')">
+                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'Sabnzbd')">
                                 <i class="mdi mdi-lan-pending"></i>
                                 ${_('Test Connection')}
                             </a>
@@ -119,7 +119,7 @@
                         </div>
                         <div class='col-md-12'>
                             <label>&nbsp;</label>
-                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'blackhole')">
+                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'BlackHole')">
                                 <i class="mdi mdi-lan-pending"></i>
                                 ${_('Test Connection')}
                             </a>
@@ -188,7 +188,7 @@
                         </div>
                         <div class='col-md-12'>
                             <label>&nbsp;</label>
-                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'delugerpc')">
+                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'DelugeRPC')">
                                 <i class="mdi mdi-lan-pending"></i>
                                 ${_('Test Connection')}
                             </a>
@@ -235,7 +235,7 @@
                         </div>
                         <div class='col-md-12'>
                             <label>&nbsp;</label>
-                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'delugeweb')">
+                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'DelugeWeb')">
                                 <i class="mdi mdi-lan-pending"></i>
                                 ${_('Test Connection')}
                             </a>
@@ -268,7 +268,7 @@
                         </div>
                         <div class='col-md-12'>
                             <label>&nbsp;</label>
-                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'rtorrentscgi')">
+                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'rTorrentSCGI')">
                                 <i class="mdi mdi-lan-pending"></i>
                                 ${_('Test Connection')}
                             </a>
@@ -286,11 +286,11 @@
                         </div>
                         <div class="col-md-6">
                             <label>${_('User Name')}</label>
-                            <input type="text" data-id="user" class="form-control" placeholder="tegbzn6789" value="${config['Torrent']['rTorrentHTTP']['user']}">
+                            <input type="text" data-id="user" class="form-control" placeholder="" value="${config['Torrent']['rTorrentHTTP']['user']}">
                         </div>
                         <div class="col-md-6">
                             <label>${_('Password')}</label>
-                            <input type="text" data-id="pass" class="form-control" placeholder="tegbzn6789" value="${config['Torrent']['rTorrentHTTP']['pass']}">
+                            <input type="text" data-id="pass" class="form-control" placeholder="" value="${config['Torrent']['rTorrentHTTP']['pass']}">
                         </div>
                         <div class="col-md-6">
                             <label>${_('Add Paused')}</label>
@@ -305,7 +305,7 @@
                         </div>
                         <div class='col-md-12'>
                             <label>&nbsp;</label>
-                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'rtorrenthttp')">
+                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'rTorrentHTTP')">
                                 <i class="mdi mdi-lan-pending"></i>
                                 ${_('Test Connection')}
                             </a>
@@ -354,7 +354,7 @@
                         </div>
                         <div class='col-md-12'>
                             <label>&nbsp;</label>
-                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'transmission')">
+                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'Transmission')">
                                 <i class="mdi mdi-lan-pending"></i>
                                 ${_('Test Connection')}
                             </a>
@@ -384,7 +384,7 @@
                         </div>
                         <div class='col-md-12'>
                             <label>&nbsp;</label>
-                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'qbittorrent')">
+                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'QBittorrent')">
                                 <i class="mdi mdi-lan-pending"></i>
                                 ${_('Test Connection')}
                             </a>
@@ -398,7 +398,7 @@
                         </div>
                         <div class='col-md-12'>
                             <label>&nbsp;</label>
-                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'blackhole')">
+                            <a class="btn btn-primary form-control" onclick="test_connection(event, this, 'BlackHole')">
                                 <i class="mdi mdi-lan-pending"></i>
                                 ${_('Test Connection')}
                             </a>
