Fix quotes on css links
Regex is like, really confusing, man.

--- a/templates/settings/downloader.html
+++ b/templates/settings/downloader.html
@@ -5,8 +5,8 @@
         <script src="${url_base}/static/js/settings/shared.js?v=010 type="text/javascript"></script>
         <script src="${url_base}/static/js/settings/downloader.js?v=010 type="text/javascript"></script>
 
-        <link href="${url_base}/static/css/settings/shared.css?v=010 rel="stylesheet">
-        <link href="${url_base}/static/css/settings/downloader.css?v=010 rel="stylesheet">
+        <link href="${url_base}/static/css/settings/shared.css?v=010" rel="stylesheet">
+        <link href="${url_base}/static/css/settings/downloader.css?v=010" rel="stylesheet">
     </head>
     <body>
         ${navbar}
