--- a/templates/head.html
+++ b/templates/head.html
@@ -7,9 +7,9 @@
 <link rel="icon" type="image/png" href="${url_base}/static/images/favicon.png" />
 <link rel="apple-touch-icon" href="${url_base}/static/images/logo_bg.png" />
 
-<link href="${url_base}/static/css/themes/${uitheme or 'Default'}.css?v=010 rel="stylesheet">
-<link href="${url_base}/static/css/lib/materialdesignicons.min.css?v=010 rel="stylesheet">
-<link href="${url_base}/static/css/style.css?v=010 rel="stylesheet">
+<link href="${url_base}/static/css/themes/${uitheme or 'Default'}.css?v=010" rel="stylesheet">
+<link href="${url_base}/static/css/lib/materialdesignicons.min.css?v=010" rel="stylesheet">
+<link href="${url_base}/static/css/style.css?v=010" rel="stylesheet">
 
 <script src="${url_base}/static/js/lib/jquery.310.min.js?v=010 type="text/javascript"></script>
 <script src="${url_base}/static/js/lib/bootstrap.bundle.min.js?v=010 type="text/javascript"></script>
