--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,12 @@
         <title>Watcher</title>
         <meta content="${url_base}" name="url_base">
         <meta content="width=device-width,initial-scale=1" name="viewport">
-        <link href="${url_base}/auth/static/css/themes/${uitheme or 'Default'}.css?v=010 rel="stylesheet">
-        <link href="${url_base}/auth/static/css/lib/materialdesignicons.min.css?v=010 rel="stylesheet">
-        <link href="${url_base}/auth/static/css/login.css?v=010 rel="stylesheet">
+        <link href="${url_base}/auth/static/css/themes/${uitheme or 'Default'}.css?v=010" rel="stylesheet">
+        <link href="${url_base}/auth/static/css/lib/materialdesignicons.min.css?v=010" rel="stylesheet">
+        <link href="${url_base}/auth/static/css/login.css?v=010" rel="stylesheet">
         <script src="${url_base}/auth/static/js/lib/jquery.310.min.js?v=010 type="text/javascript"></script>
         <script src="${url_base}/auth/static/js/login.js?v=010 type="text/javascript"></script>
-        <link href="${url_base}/auth/static/css/style.css?v=010 rel="stylesheet">
+        <link href="${url_base}/auth/static/css/style.css?v=010" rel="stylesheet">
         <meta name="enable_notifs" content="false" />
     </head>
     <body>
