--- a/templates/settings/indexers.html
+++ b/templates/settings/indexers.html
@@ -29,8 +29,8 @@
     <head>
         ${head}
 
-        <link href="${url_base}/static/css/settings/shared.css?v=010 rel="stylesheet">
-        <link href="${url_base}/static/css/settings/indexers.css?v=010 rel="stylesheet">
+        <link href="${url_base}/static/css/settings/shared.css?v=010" rel="stylesheet">
+        <link href="${url_base}/static/css/settings/indexers.css?v=010" rel="stylesheet">
 
         <script src="${url_base}/static/js/settings/shared.js?v=010 type="text/javascript"></script>
         <script src="${url_base}/static/js/settings/indexers.js?v=010 type="text/javascript"></script>
