--- a/templates/settings/postprocessing.html
+++ b/templates/settings/postprocessing.html
@@ -23,8 +23,8 @@
 <html>
     <head>
         ${head}
-        <link href="${url_base}/static/css/settings/shared.css?v=010 rel="stylesheet">
-        <link href="${url_base}/static/css/settings/postprocessing.css?v=010 rel="stylesheet">
+        <link href="${url_base}/static/css/settings/shared.css?v=010" rel="stylesheet">
+        <link href="${url_base}/static/css/settings/postprocessing.css?v=010" rel="stylesheet">
 
         <script src="${url_base}/static/js/settings/shared.js?v=010 type="text/javascript"></script>
         <script src="${url_base}/static/js/settings/postprocessing.js?v=010 type="text/javascript"></script>
