--- a/templates/settings/system.html
+++ b/templates/settings/system.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         ${head}
-        <link href="${url_base}/static/css/system.css?v=010 rel="stylesheet">
+        <link href="${url_base}/static/css/system.css?v=010" rel="stylesheet">
         <script src="${url_base}/static/js/system.js?v=010 type="text/javascript"></script>
         <script src="${url_base}/static/js/settings/shared.js?v=010 type="text/javascript"></script>
         <script src="${url_base}/static/js/lib/liteuploader.min.js?v=010 type="text/javascript"></script>
