--- a/templates/system/update.html
+++ b/templates/system/update.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         ${head}
-        <link href="${url_base}/static/css/system/update.css?v=010 rel="stylesheet">
+        <link href="${url_base}/static/css/system/update.css?v=010" rel="stylesheet">
         <script src="${url_base}/static/js/system/update.js?v=010 type="text/javascript"></script>
         <meta name="enable_notifs" content="false">
         <meta name="updating" content="${updating}">
