Fix js version strings

--- a/templates/settings/system.html
+++ b/templates/settings/system.html
@@ -3,9 +3,9 @@
     <head>
         ${head}
         <link href="${url_base}/static/css/system.css?v=010" rel="stylesheet">
-        <script src="${url_base}/static/js/system.js?v=010 type="text/javascript"></script>
-        <script src="${url_base}/static/js/settings/shared.js?v=010 type="text/javascript"></script>
-        <script src="${url_base}/static/js/lib/liteuploader.min.js?v=010 type="text/javascript"></script>
+        <script src="${url_base}/static/js/system.js?v=010" type="text/javascript"></script>
+        <script src="${url_base}/static/js/settings/shared.js?v=010" type="text/javascript"></script>
+        <script src="${url_base}/static/js/lib/liteuploader.min.js?v=010" type="text/javascript"></script>
 
         <meta name="tasks" content='${tasks}'>
         <meta name="server_time" content="${server_time[1]}">
