--- a/templates/system/restart.html
+++ b/templates/system/restart.html
@@ -3,7 +3,7 @@
     <head>
         ${head}
         <link href="${url_base}/static/css/system/restart.css?v=010" rel="stylesheet">
-        <script src="${url_base}/static/js/system/restart.js?v=010 type="text/javascript"></script>
+        <script src="${url_base}/static/js/system/restart.js?v=010" type="text/javascript"></script>
         <meta name="enable_notifs" content="false">
     </head>
     <body>
