--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -3,7 +3,7 @@
     <head>
         ${head}
         <link href="${url_base}/static/css/add_movie.css?v=010" rel="stylesheet">
-        <script src="${url_base}/static/js/add_movie.js?v=010 type="text/javascript"></script>
+        <script src="${url_base}/static/js/add_movie.js?v=010" type="text/javascript"></script>
     </head>
     <body>
         ${navbar}
