--- a/templates/head.html
+++ b/templates/head.html
@@ -11,11 +11,11 @@
 <link href="${url_base}/static/css/lib/materialdesignicons.min.css?v=010" rel="stylesheet">
 <link href="${url_base}/static/css/style.css?v=010" rel="stylesheet">
 
-<script src="${url_base}/static/js/lib/jquery.310.min.js?v=010 type="text/javascript"></script>
-<script src="${url_base}/static/js/lib/bootstrap.bundle.min.js?v=010 type="text/javascript"></script>
-<script src="${url_base}/static/js/lib/bootstrap-notify.min.js?v=010 type="text/javascript"></script>
-<script src="${url_base}/static/js/shared.js?v=010 type="text/javascript"></script>
-<script src="${url_base}/static/js/localization.js?v=010 type="text/javascript"></script>
+<script src="${url_base}/static/js/lib/jquery.310.min.js?v=010" type="text/javascript"></script>
+<script src="${url_base}/static/js/lib/bootstrap.bundle.min.js?v=010" type="text/javascript"></script>
+<script src="${url_base}/static/js/lib/bootstrap-notify.min.js?v=010" type="text/javascript"></script>
+<script src="${url_base}/static/js/shared.js?v=010" type="text/javascript"></script>
+<script src="${url_base}/static/js/localization.js?v=010" type="text/javascript"></script>
 
 <template id="notifications_json">
     ${notifications}
