--- a/templates/settings/quality.html
+++ b/templates/settings/quality.html
@@ -84,9 +84,9 @@
         <link href="${url_base}/static/css/settings/shared.css?v=010" rel="stylesheet">
         <link href="${url_base}/static/css/settings/quality.css?v=010" rel="stylesheet">
 
-        <script src="${url_base}/static/js/settings/shared.js?v=010 type="text/javascript"></script>
-        <script src="${url_base}/static/js/settings/quality.js?v=010 type="text/javascript"></script>
-        <script src="${url_base}/static/js/lib/jquery.sortable.min.js?v=010 type="text/javascript"></script>
+        <script src="${url_base}/static/js/settings/shared.js?v=010" type="text/javascript"></script>
+        <script src="${url_base}/static/js/settings/quality.js?v=010" type="text/javascript"></script>
+        <script src="${url_base}/static/js/lib/jquery.sortable.min.js?v=010" type="text/javascript"></script>
     </head>
     <body>
         ${navbar}
