--- a/templates/settings/search.html
+++ b/templates/settings/search.html
@@ -5,8 +5,8 @@
         <link href="${url_base}/static/css/settings/shared.css?v=010" rel="stylesheet">
         <link href="${url_base}/static/css/settings/search.css?v=010" rel="stylesheet">
 
-        <script src="${url_base}/static/js/settings/shared.js?v=010 type="text/javascript"></script>
-        <script src="${url_base}/static/js/settings/search.js?v=010 type="text/javascript"></script>
+        <script src="${url_base}/static/js/settings/shared.js?v=010" type="text/javascript"></script>
+        <script src="${url_base}/static/js/settings/search.js?v=010" type="text/javascript"></script>
     </head>
     <body>
         ${navbar}
