Add option to disable debug logging to file
Changes --debug flag to --stdout to more accurately reflect its purpose

Change log hanlder level based on Debug option in settings/server

--stdout logging always uses debug level

--- a/templates/settings/server.html
+++ b/templates/settings/server.html
@@ -59,6 +59,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <label>* ${_('Debug Logging')}</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">
+                                <i id="debuglog" class="mdi mdi-checkbox-blank-outline c_box" value="${config['debuglog']}"></i>
+                            </span>
+                        </div>
+                        <span class="input-group-item form-control">
+                            ${_('Enable Debug level logging')}
+                    </span>
+                    </div>
+                </div>
             </form>
 
             <h1>${_('Security')}</h1>
