--- a/templates/head.html
+++ b/templates/head.html
@@ -14,12 +14,12 @@
 <script src="${url_base}/static/js/lib/jquery.310.min.js?v=010" type="text/javascript"></script>
 <script src="${url_base}/static/js/lib/bootstrap.bundle.min.js?v=010" type="text/javascript"></script>
 <script src="${url_base}/static/js/lib/bootstrap-notify.min.js?v=010" type="text/javascript"></script>
-<script src="${url_base}/static/js/shared.js?v=010" type="text/javascript"></script>
+<script src="${url_base}/static/js/shared.js?v=011" type="text/javascript"></script>
 <script src="${url_base}/static/js/localization.js?v=010" type="text/javascript"></script>
 
-<template id="notifications_json">
+<script id="notifications_json">
     ${notifications}
-</template>
+</script>
 
 
 
