#212 Allow preference of usenet or torrents
User can choose to prefer usenet or torrent releases

Releases are sorted by score, source preference (usenet/torrent), size (asc/desc)

--- a/templates/settings/search.html
+++ b/templates/settings/search.html
@@ -110,6 +110,15 @@
                 <div class="col-md-12 separator"></div>
 
                 <div class="col-md-6">
+                    <label>${_('Preferred Source')}</label>
+                    <select id="preferredsource" class="form-control select-sm" value="${config['preferredsource']}">
+                        <option value="">${_('None')}</option>
+                        <option value="torrent">${_('Torrent')}</option>
+                        <option value="usenet">${_('Usenet')}</option>
+                    </select>
+                </div>
+
+                <div class="col-md-6">
                     <label>${_('Torrents Must Have [X] Seeds')}</label>
                     <input type="number" id="mintorrentseeds" class="form-control" min="0" placeholder="1" value="${config['mintorrentseeds']}">
                 </div>
