More javascript cleanup

--- a/templates/head.html
+++ b/templates/head.html
@@ -1,6 +1,7 @@
 <title>Watcher</title>
 <meta content="noindex, nofollow" name="robots">
 <meta content="${url_base}" name="url_base">
+<meta content="true" name="enable_notifs">
 <meta content="${language}" name="language">
 <meta content="width=device-width,initial-scale=1" name="viewport">
 
@@ -14,7 +15,7 @@
 <script src="${url_base}/static/js/lib/jquery.310.min.js?v=010" type="text/javascript"></script>
 <script src="${url_base}/static/js/lib/bootstrap.bundle.min.js?v=010" type="text/javascript"></script>
 <script src="${url_base}/static/js/lib/bootstrap-notify.min.js?v=010" type="text/javascript"></script>
-<script src="${url_base}/static/js/shared.js?v=011" type="text/javascript"></script>
+<script src="${url_base}/static/js/shared.js?v=012" type="text/javascript"></script>
 <script src="${url_base}/static/js/localization.js?v=010" type="text/javascript"></script>
 
 <script id="notifications_json">
