Can add torrents
Gets downloadid, downloads to directory id, sends proper callback url and gets response.

Adding seems to be complete.

--- a/templates/settings/downloader.html
+++ b/templates/settings/downloader.html
@@ -242,8 +242,8 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <label>${_('Put.IO Directory')}</label>
-                            <input type="text" data-id="directory" class="form-control" placeholder="Movies" value="${config['Torrent']['PutIO']['directory']}">
+                            <label>${_('Put.IO Directory ID')}</label>
+                            <input type="number" data-id="directory" class="form-control" placeholder="8675309" value="${config['Torrent']['PutIO']['directory']}">
                         </div>
                         <div class="col-md-6">
                             <label>${_('Enable Post Processing')}</label>
