--- a/templates/settings/indexers.html
+++ b/templates/settings/indexers.html
@@ -182,6 +182,24 @@
                 </div>
             </form>
 
+            <h1>Private Torrent Indexers</h1>
+            <form class="form-group row bg-light rounded mx-auto py-3" data-category="privtorrent">
+                <div class="input-group col-md-12">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="mdi mdi-checkbox-blank-outline c_box" data-id="danishbits" title="Enabled" value="${config['PrivateTorrent']['danishbits']['enabled']}"></i>
+                        </span>
+                    </div>
+                    <span class="input-group-item form-control">
+                        DanishBits
+                    </span>
+                </div>
+                <div class="input-group col-md-12">
+                    <input class="form-control" type="text" data-id="danishbits-username" placeholder="Username" value="${config['PrivateTorrent']['danishbits']['username']}"/>
+                    <input class="form-control" type="text" data-id="danishbits-passkey" placeholder="Passkey" value="${config['PrivateTorrent']['danishbits']['passkey']}"/>
+                </div>
+            </form>
+
             <button id="save_settings" class="btn btn-success float-right" onclick="save_settings(event, this)">
                 <i class="mdi mdi-content-save"></i>
 
