#251 Add per-movie filter options
Adds ability to specify word filters (ignored, required, preferred) for each individual movie. These are appended to the words groups of the quality profile -- they do not replace the quality profile's filters.

Adds a second options segment to the movie status modal for advanced settings where these input boxes can be found.

Adds text-align:center to all i.mdi elements to allow rotation transforms to operate smoothly. Adds inline-block to all h5 headers.

Updates database to v8. This adds the 'filters' column to the MOVIES table. Filters are to be stored as a JSON-formatted string.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,6 +30,7 @@ i.mdi{
     user-select: none;
     cursor: pointer;
     transition: none;
+    text-align: center;
 }
 
 i.mdi.animated{
@@ -170,6 +171,10 @@ ul.dropdown-menu > li{
 /* Bootstrap Overrides */
 table.table th{
     padding: .4rem;
+}
+
+h5{
+    display: inline-block;
 }
 
 /* Always hide hacks at the bottom and hope nobody sees it */
